# cpp-abstraccion-modularidad

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md
.github/workflows/: ci.yml
src/: analytics.cpp  inventory.cpp  main.cpp  pricing.cpp  utils.cpp
